sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
val n = getNombreValeurs()
var swapped = false
	while (swapped)		
		{for (i <- 0 to n-2)
			{if (!plusPetit(i,i+1))
				{echange(i,i+1)
				swap = true}
			}
		}
}